--- a/client/src/components/tweetComponent/Tweet.scss
+++ b/client/src/components/tweetComponent/Tweet.scss
@@ -1,30 +1,316 @@
 @import '../../style/mixins.scss';
+@import '../../style/breakpoints.scss';
 
+
+// This holds everything together
 .tweet-section{
     width: 100%;
-    height: 8em;
     border: 1px gray solid;
 
     display: flex;
     flex-direction: row;
 
-    .pfp-section{
-        width: 9%;
-        
-        
-        display: flex;
-        justify-content: center;
-        .tweet-pfp{
-            margin-top: 0.5em;
-            width: 80%;
-            height: 50%;
-            border-radius: 50%;
+    // * Small profile screen and document
+    @include sm(){
+        // The left side of our Tweet 
+        .pfp-section{
+            display: flex;
+            justify-content: center;
+            width: 9%;
             
+            // ? Image but using className
+            .tweet-pfp{
+                margin-top: 0.3em;
+                width: 85%;
+                height: 40%;
+                border-radius: 50%;   
+            }
+        }
+
+        // ? The right side of the Tweet box
+        .tweet-glue{
+            width: 91%;
+            height: 100%;
+
+            display: flex;
+            flex-direction: column;
+
+            .header{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                height: 20%;
+                
+                padding-top: 0.2em;
+                padding-left: 0.3em;
+                // ? Somehow className for link works Proof of Concept
+                // This will be the POTUS
+                .profile-link{
+                    color: black;
+                    margin-right: 0.3em;
+                    &:hover{
+                        // text-decoration: none;
+                    }
+                }
+
+                // THIS IS @POTUS
+                .handleName{
+                    color: #3d3f41;
+                }
+                .potus-del-btn{
+
+                    .potus-btn-delete{
+                        display: flex;
+                        justify-content: center;
+                        
+                        
+                        padding-top: 2px;
+                        background-color: red;
+                        color: white;
+                        border: 1px solid black;
+                        border-radius: 40px;
+                        width: 10em;
+        
+                        &:hover{
+                            box-shadow: var(--box-shadow);
+                        }
+                    }
+                    
+                    
+                }
+            }
+
+            .message{
+                padding-left: 0.3em;
+                height: 60%;
+                overflow: hidden;
+                word-wrap: break-word;
+                font-size: 92%;
+            }
+
+            .button-section{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-left: 0.3em; 
+                
+                .reply-btn-area{
+
+                }
+
+                .like-btn-area{
+                    display: flex;
+                    justify-content: center;
+                    span{
+                        margin-right: 0.3em;
+                    }
+
+                    .like-btn{
+                        
+                    }
+                }
+
+                .del-btn-area{
+                    .btn-delete{
+                        margin-right: 0.5em;
+                        border-radius: 5px;
+                        border: 1px gray solid;
+                        color: black;
+                        padding-top: 0.15em;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-bottom: 2px;
+                        &:hover{
+                            background-color: red;
+                            color: white;
+                            box-shadow: var(--box-shadow);
+                        }
+                    }
+
+                    .hidden-btn-delete{
+                        visibility: hidden;
+                        
+                        margin-right: 0.5em;
+                        border-radius: 5px;
+                        border: 1px gray solid;
+                        color: black;
+                        padding-top: 0.15em;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-bottom: 2px;   
+                    }
+                }
+            }
+
         }
     }
 
-    .tweet-area{
-        margin-left: 0.3em;
+// * 
+// *
+// ? MEDIUM
+// *
+// *
+
+    @include md(){
+        // The left side of our Tweet 
+        
+        .pfp-section{
+            
+            display: flex;
+            justify-content: center;
+            width: 9%;
+            
+            // ? Image but using className
+            .tweet-pfp{
+                margin-top: 0.3em;
+                width: 85%;
+                height: 40%;
+                border-radius: 50%;   
+            }
+        }
+
+        // ? The right side of the Tweet box
+        .tweet-glue{
+            width: 91%;
+            height: 100%;
+
+            display: flex;
+            flex-direction: column;
+
+            .header{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                height: 20%;
+                
+                padding-top: 0.2em;
+                padding-left: 0.3em;
+                // ? Somehow className for link works Proof of Concept
+                // This will be the POTUS
+                .profile-link{
+                    color: black;
+                    margin-right: 0.3em;
+                    &:hover{
+                        // text-decoration: none;
+                    }
+                }
+
+                // THIS IS @POTUS
+                .handleName{
+                    color: #3d3f41;
+                }
+                .potus-del-btn{
+
+                    .potus-btn-delete{
+                        display: flex;
+                        justify-content: center;
+                        
+                        
+                        padding-top: 2px;
+                        background-color: red;
+                        color: white;
+                        border: 1px solid black;
+                        border-radius: 40px;
+                        width: 10em;
+        
+                        &:hover{
+                            box-shadow: var(--box-shadow);
+                        }
+                    }
+                    
+                    
+                }
+            }
+
+            .message{
+                padding-left: 0.3em;
+                height: 60%;
+                overflow: hidden;
+                word-wrap: break-word;
+                font-size: 92%;
+            }
+
+            .button-section{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-left: 0.3em; 
+                
+                .reply-btn-area{
+
+                }
+
+                .like-btn-area{
+                    display: flex;
+                    justify-content: center;
+                    span{
+                        margin-right: 0.3em;
+                    }
+
+                    .like-btn{
+                        
+                    }
+                }
+
+                .del-btn-area{
+                    .btn-delete{
+                        margin-right: 0.5em;
+                        border-radius: 5px;
+                        border: 1px gray solid;
+                        color: black;
+                        padding-top: 0.15em;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-bottom: 2px;
+                        &:hover{
+                            background-color: red;
+                            color: white;
+                            box-shadow: var(--box-shadow);
+                        }
+                    }
+
+                    .hidden-btn-delete{
+                        visibility: hidden;
+                        
+                        margin-right: 0.5em;
+                        border-radius: 5px;
+                        border: 1px gray solid;
+                        color: black;
+                        padding-top: 0.15em;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-bottom: 2px;   
+                    }
+                }
+            }
+
+        }
+    }
+
+// * 
+// *
+// ? LARGE
+// *
+// *
+
+@include lg(){
+    // The left side of our Tweet 
+    .pfp-section{
+        display: flex;
+        justify-content: center;
+        width: 9%;
+        
+        // ? Image but using className
+        .tweet-pfp{
+            margin-top: 0.3em;
+            width: 85%;
+            height: 40%;
+            border-radius: 50%;   
+        }
+    }
+
+    // ? The right side of the Tweet box
+    .tweet-glue{
         width: 91%;
         height: 100%;
 
@@ -39,10 +325,17 @@
             
             padding-top: 0.2em;
             padding-left: 0.3em;
+            // ? Somehow className for link works Proof of Concept
+            // This will be the POTUS
             .profile-link{
                 color: black;
                 margin-right: 0.3em;
+                &:hover{
+                    // text-decoration: none;
+                }
             }
+
+            // THIS IS @POTUS
             .handleName{
                 color: #3d3f41;
             }
@@ -82,6 +375,7 @@
             flex-direction: row;
             justify-content: space-between;
             padding-left: 0.3em; 
+            
             .reply-btn-area{
 
             }
@@ -125,15 +419,11 @@
                     padding-top: 0.15em;
                     padding-left: 4px;
                     padding-right: 4px;
-                    margin-bottom: 2px;
-                    
+                    margin-bottom: 2px;   
                 }
-
-
-            
             }
-
-            
         }
+
     }
+}
 }
